--- a/index.html
+++ b/index.html
@@ -1,16 +1,138 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Chris Etges: Full Stack Web Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/animate.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <script src="assets/js/materialize.min.js"></script>
-    <script src="/assets/js/script.js"></script>
 </head>
+
 <body>
-    
+    <header>
+        <div class="container">
+            <!-- Primary Nav Bar -->
+            <nav>
+                <div class="nav-wrapper">
+                    <a href="#" class="brand-logo center">Chris Etges</a>
+                    <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+                        <i class="material-icons">menu</i>
+                    </a>
+                    <ul id="nav-mobile" class="right hide-on-small-and-down">
+                        <li>
+                            <a href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+            <!-- Sidebar on Mobile -->
+            <ul class="sidenav" id="mobile-demo">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="portfolio.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </header>
+
+    <main>
+
+        <div class="container">
+            <!-- Jumbotron -->
+            <div id="jumbotron" class="valign-wrapper">
+                <div class="row">
+                    <div class="col s12 center-block">
+                        <h1 class="animated bounceInDown center-align">Chris Etges</h1>
+                    </div>
+                    <div class="col s12 center-block">
+                        <h4 class="animated bounceInUp center-align">Full Stack Web Developer</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Bio-->
+        <section id="bio">
+            <div class="row">
+                <div class="col s2"></div>
+                <div class="col s4">
+                    <img id="headshot" class="z-depth-5" src="assets/images/headshot.jpg" alt="headshot of Chris Etges">
+                </div>
+                <div id = "bioP" class="col s4">
+                    <p>My name is Chris Etges, and I have recently begun my journey towards becoming a full time web-developer.
+                        I am currently enrolled in the full-stack web development course at the University of Denver. I started
+                        learning HTML and CSS through codeacademy, and continued with courses through the University of Michigan
+                        online (via Coursera) in Javascript and Responsive Design. I continue to learn and grow and improve
+                        my skills. I hope to become a full-time web developer in front-end technologies, though once I become
+                        more familiar with backend technologies I'm hoping to be a full-stack developer. I've been interested
+                        in tech as a hobby for my entire life, and frequently mess around with beta programs, and custom
+                        ROM installs on my Android devices. I'm an avid gamer, and love photography and travel. You'll see
+                        a few of my website projects in my portfolio, and feel free to reach out to me for custom work or
+                        questions. Thanks!
+                    </p>
+
+                </div>
+            </div>
+        </section>
+
+
+    </main>
+
+    <div class="container">
+        <footer class="page-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5 class="white-text">Footer Content</h5>
+                        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    </div>
+                    <div class="col l4 offset-l2 s12">
+                        <h5 class="white-text">Links</h5>
+                        <ul>
+                            <li>
+                                <a class="grey-text text-lighten-3" href="#!">Link 1</a>
+                            </li>
+                            <li>
+                                <a class="grey-text text-lighten-3" href="#!">Link 2</a>
+                            </li>
+                            <li>
+                                <a class="grey-text text-lighten-3" href="#!">Link 3</a>
+                            </li>
+                            <li>
+                                <a class="grey-text text-lighten-3" href="#!">Link 4</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                <div class="container">
+                    © 2018 Christopher Etges
+                    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="assets/js/materialize.min.js"></script>
+    <script src="assets/js/script.js"></script>
+
 </body>
+
 </html>
