--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Chris Etges: Full Stack Web Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/animate.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
@@ -18,11 +19,11 @@
             <!-- Primary Nav Bar -->
             <nav>
                 <div class="nav-wrapper">
-                    <a href="#" class="brand-logo center">Chris Etges</a>
+                    <a href="index.html" class="brand-logo center">Chris Etges</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger">
                         <i class="material-icons">menu</i>
                     </a>
-                    <ul id="nav-mobile" class="right hide-on-small-and-down">
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
                         <li>
                             <a href="portfolio.html">Portfolio</a>
                         </li>
@@ -55,22 +56,22 @@
             <div id="jumbotron" class="valign-wrapper">
                 <div class="row">
                     <div class="col s12 center-block">
-                        <h1 class="animated bounceInDown center-align">Chris Etges</h1>
+                        <h1 class="animated fadeInUp center-align">Chris Etges</h1>
                     </div>
                     <div class="col s12 center-block">
-                        <h4 class="animated bounceInUp center-align">Full Stack Web Developer</h4>
+                        <h4 class="animated fadeInUp center-align">Full Stack Web Developer</h4>
                     </div>
                 </div>
             </div>
         </div>
         <!--Bio-->
-        <section id="bio">
+        <section id="bio" class="section scrollspy">
             <div class="row">
-                <div class="col s2"></div>
-                <div class="col s4">
-                    <img id="headshot" class="z-depth-5" src="assets/images/headshot.jpg" alt="headshot of Chris Etges">
+                <div class="col l2 hide-on-small-and-down"></div>
+                <div class="col s6 l4">
+                    <img id="headshot" class="animated fadeInLeft z-depth-5" src="assets/images/headshot.jpg" alt="headshot of Chris Etges">
                 </div>
-                <div id = "bioP" class="col s4">
+                <div id = "bioP" class="animated fadeInRight col m4 l5">
                     <p>My name is Chris Etges, and I have recently begun my journey towards becoming a full time web-developer.
                         I am currently enrolled in the full-stack web development course at the University of Denver. I started
                         learning HTML and CSS through codeacademy, and continued with courses through the University of Michigan
@@ -95,23 +96,18 @@
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
-                        <h5 class="white-text">Footer Content</h5>
-                        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                        <h5 class="white-text">Links</h5>
                     </div>
                     <div class="col l4 offset-l2 s12">
-                        <h5 class="white-text">Links</h5>
                         <ul>
                             <li>
-                                <a class="grey-text text-lighten-3" href="#!">Link 1</a>
+                                <a class="grey-text text-lighten-3" href="https://github.com/cetges86">GitHub</a>
                             </li>
                             <li>
-                                <a class="grey-text text-lighten-3" href="#!">Link 2</a>
+                                <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/chrisetges/">LinkedIn</a>
                             </li>
                             <li>
-                                <a class="grey-text text-lighten-3" href="#!">Link 3</a>
-                            </li>
-                            <li>
-                                <a class="grey-text text-lighten-3" href="#!">Link 4</a>
+                                <a class="grey-text text-lighten-3" href="https://stackoverflow.com/users/story/8929426">Stack Overflow</a>
                             </li>
                         </ul>
                     </div>
@@ -120,7 +116,6 @@
             <div class="footer-copyright">
                 <div class="container">
                     © 2018 Christopher Etges
-                    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
                 </div>
             </div>
         </footer>
