added portfolio images

--- a/index.html
+++ b/index.html
@@ -65,14 +65,12 @@
             </div>
         </div>
         <!--Bio-->
-        <section id="bio" class="section scrollspy">
+        <section id="bio">
             <div class="row">
-                <div class="col l2 hide-on-small-and-down"></div>
-                <div class="col s6 l4">
-                    <img id="headshot" class="animated fadeInLeft z-depth-5" src="assets/images/headshot.jpg" alt="headshot of Chris Etges">
-                </div>
-                <div id = "bioP" class="animated fadeInRight col m4 l5">
-                    <p>My name is Chris Etges, and I have recently begun my journey towards becoming a full time web-developer.
+                <div class="col s2"></div>
+                <div class="col s8">
+                    <img id="headshot" class="clearfix animated z-depth-5" src="assets/images/headshot.jpg" alt="headshot of Chris Etges">
+                    <p id = "bioP" class="animated">My name is Chris Etges, and I have recently begun my journey towards becoming a full time web-developer.
                         I am currently enrolled in the full-stack web development course at the University of Denver. I started
                         learning HTML and CSS through codeacademy, and continued with courses through the University of Michigan
                         online (via Coursera) in Javascript and Responsive Design. I continue to learn and grow and improve
@@ -83,8 +81,8 @@
                         a few of my website projects in my portfolio, and feel free to reach out to me for custom work or
                         questions. Thanks!
                     </p>
-
                 </div>
+                
             </div>
         </section>
 
@@ -126,7 +124,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="assets/js/materialize.min.js"></script>
+    <script src="assets/js/waypoints/lib/jquery.waypoints.js"></script>
     <script src="assets/js/script.js"></script>
+
 
 </body>
 
