--- a/portfolio.html
+++ b/portfolio.html
@@ -59,39 +59,120 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">NiteOwl Night Planner</span>
-                            <i class="material-icons right">more_vert</i>
+                        <i class="material-icons right">more_vert</i>
                         </span>
                         <p>
-                            <a target= "_blank" href="https://cetges86.github.io/NiteOwl-Night-Planner/">Link</a>
+                            <a target="_blank" href="https://cetges86.github.io/NiteOwl-Night-Planner/">Link</a>
                         </p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">NiteOwl Night Planner
                             <i class="material-icons right">close</i>
                         </span>
-                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                        <p>Night/Event planner based on user's location.
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>jQuery</li>
+                            <li>Firebase</li>
+                            <li>Materialize.css (css framework)</li>
+                            <li>AJAX for API calls</li>
+                            <li>email.js</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/NiteOwl-Night-Planner">Github Repo</a>
                     </div>
                 </div>
                 <div class="col s2"></div>
                 <div class="card animated zoomIn col s5">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/fallchrissq.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Christopher Etges Photography</span>
-                                <i class="material-icons right">more_vert</i>
-                            </span>
-                            <p>
-                                <a target= "_blank" href="https://cetges86.github.io/CEtges-Photo">Link</a>
-                            </p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Christopher Etges Photography
-                                <i class="material-icons right">close</i>
-                            </span>
-                            <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                        </div>
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/fallchrissq.jpg">
                     </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Christopher Etges Photography</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://cetges86.github.io/CEtges-Photo">Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Christopher Etges Photography
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Webpage built for my photography hobby.
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>Bootstrap</li>
+                            <li>Javascript/jQuery</li>
+                            <li>Built using a Bootstrap template provided by freehtml5.co</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/CEtges-Photo">Github Repo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="card animated zoomIn col s5">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/trukeepicon.jpeg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Trukeep Bookkeepping</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://www.trukeep.com">Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Trukeep Bookkeepping Services
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Webpage built for an online cloud-based bookkeepping service
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>Bootstrap</li>
+                            <li>Built using a Bootstrap template provided by freehtml5.co</li>
+                            <li>php for Form</li>
+                            <li>Javascript/jQuery</li>
+                            <li>reCaptcha for authentication/security</li>
+                        </ul>
+                        <a href="">Github Repo</a>
+                    </div>
+                </div>
+                <div class="col s2"></div>
+                <div class="card animated zoomIn col s5">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/anatomy.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Anatomy Trivia</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://cetges86.github.io/TriviaGame">Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Anatomy Trivia Game
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Anatomy Trivia
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>jQuery</li>
+                            <li>Javascript</li>
+                            <li>Bootstrap</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/TriviaGame">Github Repo</a>
+                    </div>
+                </div>
             </div>
         </div>
 
