--- a/portfolio.html
+++ b/portfolio.html
@@ -52,10 +52,11 @@
     <main>
         <div class="container">
             <h3 class="center-align">Portfolio Projects</h3>
-            <div class="row">
-                <div class="card animated zoomIn col s5">
+            <hr>
+            <div class="row valign-wrapper">
+                <div id="proj1" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/niteowl.png">
+                        <img class="responsive-img activator" src="assets/images/niteowl.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">NiteOwl Night Planner</span>
@@ -83,8 +84,7 @@
                         <a href="https://github.com/cetges86/NiteOwl-Night-Planner">Github Repo</a>
                     </div>
                 </div>
-                <div class="col s2"></div>
-                <div class="card animated zoomIn col s5">
+                <div id="proj2" class="card animated col s10 m5 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/fallchrissq.jpg">
                     </div>
@@ -107,14 +107,14 @@
                             <span id="heading">Technologies Used:</span>
                             <li>Bootstrap</li>
                             <li>Javascript/jQuery</li>
-                            <li>Built using a Bootstrap template provided by freehtml5.co</li>
+                            <li>Built using a Bootstrap template provided by freehtml6.co</li>
                         </ul>
                         <a href="https://github.com/cetges86/CEtges-Photo">Github Repo</a>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="card animated zoomIn col s5">
+            <div class="row valign-wrapper">
+                <div id="proj3" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/trukeepicon.jpeg">
                     </div>
@@ -144,8 +144,7 @@
                         <a href="">Github Repo</a>
                     </div>
                 </div>
-                <div class="col s2"></div>
-                <div class="card animated zoomIn col s5">
+                <div id="proj4" class="card animated col s10 m5 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/anatomy.png">
                     </div>
