--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             <div class="row valign-wrapper">
                 <div id="proj1" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="responsive-img activator" src="assets/images/niteowl.png">
+                        <img class="activator z-depth-5" src="assets/images/niteowl.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">NiteOwl Night Planner</span>
@@ -86,7 +86,7 @@
                 </div>
                 <div id="proj2" class="card animated col s10 m5 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/fallchrissq.jpg">
+                        <img class="activator z-depth-5" src="assets/images/fallchrissq.jpg">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Christopher Etges Photography</span>
@@ -170,6 +170,66 @@
                             <li>Bootstrap</li>
                         </ul>
                         <a href="https://github.com/cetges86/TriviaGame">Github Repo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row valign-wrapper">
+                <div id="proj5" class="card animated col s10 m5 l5">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/hangman.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Video Game Hangman</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://cetges86.github.io/Hangman-Game">Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Video Game Hangman
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Interactive Hangman Game 
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>Javascript/jQuery</li>
+                            <li>Bootstrap</li>
+                            <li>Mobile Responsive</li>
+                            <li>HTML5/CSS3</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/Hangman-Game">Github Repo</a>
+                    </div>
+                </div>
+                <div id="proj6" class="card animated col s10 m5 l5 offset-l2">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/cat.gif">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Giphy Animal Gif Search</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://cetges86.github.io/Gif-Search">Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Giphy Animal Gif Search
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Giphy Animal Gif Search
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>jQuery</li>
+                            <li>AJAX for API call</li>
+                            <li>Javascript</li>
+                            <li>Bootstrap</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/Gif-Search">Github Repo</a>
                     </div>
                 </div>
             </div>
