added Contact page

--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,58 @@
 
     <main>
 
+        <div class="container">
+            <h1>Contact Me</h1>
+
+            <form action="mailto:c.etges86@gmail.com">
+                Name:
+                <br>
+                <input type="text" name="name">
+                <br> E-mail address:
+                <br>
+                <input type="text">
+                <br> Message:
+                <br>
+                <textarea rows="15" id="message" type="text">Type your message here!</textarea>
+                <br>
+
+                <input id="submit" type="submit" name="">
+
+            </form>
+
+            <h3 class="valign-wrapper">Visit Me</h3>
+            <div class="row">
+
+                <div class="col s12 m3 offset-m2 l6 offset-l3">
+                    <div class="card-panel grey lighten-5 z-depth-1">
+                        <div class="row valign-wrapper">
+                            <div class="col s2">
+                                <img src="assets/images/githublogo.png" alt="github logo" class="responsive-img">
+                            </div>
+                            <div class="col s10">
+                                <span class="black-text">
+                                    This is a square image. Add the "circle" class to it to make it appear circular.
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m3 offset-m2 l6 offset-l3">
+                    <div class="card-panel grey lighten-5 z-depth-1">
+                        <div class="row valign-wrapper">
+                            <div class="col s2">
+                                <img src="assets/images/linkedinlogo.png" alt="linkedin logo" class="responsive-img">
+                            </div>
+                            <div class="col s10">
+                                <span class="black-text">
+                                    This is a square image. Add the "circle" class to it to make it appear circular.
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
 
