--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="col s8">
                     <img id="headshot" class="clearfix animated z-depth-5" src="assets/images/headshot.jpg" alt="headshot of Chris Etges">
                     <p id = "bioP" class="animated">My name is Chris Etges, and I have recently begun my journey towards becoming a full time web-developer.
-                        I am currently enrolled in the full-stack web development course at the University of Denver. I started
+                        I am currently enrolled inx the full-stack web development course at the University of Denver. I started
                         learning HTML and CSS through codeacademy, and continued with courses through the University of Michigan
                         online (via Coursera) in Javascript and Responsive Design. I continue to learn and grow and improve
                         my skills. I hope to become a full-time web developer in front-end technologies, though once I become
