--- a/portfolio.html
+++ b/portfolio.html
@@ -233,6 +233,65 @@
                     </div>
                 </div>
             </div>
+            <div class="row valign-wrapper">
+                <div id="proj7" class="card animated col s10 m5 l5">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/node.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">LIRI Bot Node Application</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://github.com/cetges86/liri-node-app">Repo Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">LIRI Node Application
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Node CLI Application that can display tweets, search Spotify for songs, or omdb for Movie information 
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>Javascript</li>
+                            <li>node.js</li>
+                            <li>npm packages: inquirer, dotenv, twitter, spotify-node-api, request</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/liri-node-app">Github Repo</a>
+                    </div>
+                </div>
+                <div id="proj8" class="card animated col s10 m5 l5 offset-l2">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/train.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Train Scheduler</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://cetges86.github.io/Train-Schedule">Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Train Schedule Plus
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Simple Firebase Schedule Tool
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>Javascript</li>
+                            <li>Firebase</li>
+                            <li>Bootstrap</li>
+                            <li>HTML/CSS</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/Train-Schedule">Github Repo</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </main>
