--- a/contact.html
+++ b/contact.html
@@ -52,50 +52,56 @@
     <main>
 
         <div class="container">
-            <h1>Contact Me</h1>
+            <h1 class="center-align">Contact Me</h1>
+            <div class="row ">
+                <form class="col s12" action="mailto:c.etges86@gmail.com">
+                    <div class="input-field col s6">
+                        <input id="name" type="text" class="validate white-text">
+                        <label for="name">Name</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="email" type="email" class="validate white-text">
+                        <label for="email">Email</label>
+                    </div>
 
-            <form action="mailto:c.etges86@gmail.com">
-                Name:
-                <br>
-                <input type="text" name="name">
-                <br> E-mail address:
-                <br>
-                <input type="text">
-                <br> Message:
-                <br>
-                <textarea rows="15" id="message" type="text">Type your message here!</textarea>
-                <br>
+                    <div class="input-field col s12">
+                        <textarea id="textarea1" class="white-text materialize-textarea"></textarea>
+                        <label for="textarea1">Message</label>
+                    </div>
 
-                <input id="submit" type="submit" name="">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                        <i class="material-icons right">send</i>
+                    </button>
 
-            </form>
+                </form>
+            </div>
 
-            <h3 class="valign-wrapper">Visit Me</h3>
+
             <div class="row">
-
-                <div class="col s12 m3 offset-m2 l6 offset-l3">
+                <h3 class="center-align">Visit Me</h3>
+                <div class="col s12 m6 l6">
                     <div class="card-panel grey lighten-5 z-depth-1">
                         <div class="row valign-wrapper">
-                            <div class="col s2">
-                                <img src="assets/images/githublogo.png" alt="github logo" class="responsive-img">
+                            <div class="col s2 m5 l5">
+                                <img src="assets/images/githublogo.png" alt="github logo" class="responsive-img circle">
                             </div>
-                            <div class="col s10">
+                            <div class="col s10 m7 l7">
                                 <span class="black-text">
-                                    This is a square image. Add the "circle" class to it to make it appear circular.
-                                </span>
+                                        <a href="https://github.com/cetges86">Visit my Github Profile</a>
+                                    </span>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m3 offset-m2 l6 offset-l3">
+                <div class="col s12 m6 l6">
                     <div class="card-panel grey lighten-5 z-depth-1">
                         <div class="row valign-wrapper">
-                            <div class="col s2">
-                                <img src="assets/images/linkedinlogo.png" alt="linkedin logo" class="responsive-img">
+                            <div class="col s2 m5 l5">
+                                <img src="assets/images/linkedinlogo.png" alt="linkedin logo" class="responsive-img circle">
                             </div>
-                            <div class="col s10">
+                            <div class="col s10 m7 l7">
                                 <span class="black-text">
-                                    This is a square image. Add the "circle" class to it to make it appear circular.
+                                    <a href="https://www.linkedin.com/in/chrisetges">Visit my LinkedIn Profile</a>
                                 </span>
                             </div>
                         </div>
