--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             <!-- Primary Nav Bar -->
             <nav>
                 <div class="nav-wrapper">
-                    <a href="index.html" class="brand-logo center">Chris Etges</a>
+                    <a href="index.html" class="brand-logo left">Chris Etges</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger">
                         <i class="material-icons">menu</i>
                     </a>
@@ -53,48 +53,40 @@
 
         <div class="container">
             <h1 class="center-align">Contact Me</h1>
-            <div class="row ">
-                <form class="col s12" action="mailto:c.etges86@gmail.com">
-                    <div class="input-field col s6">
-                        <input id="name" type="text" class="validate white-text">
-                        <label for="name">Name</label>
-                    </div>
-                    <div class="input-field col s6">
-                        <input id="email" type="email" class="validate white-text">
-                        <label for="email">Email</label>
-                    </div>
-
-                    <div class="input-field col s12">
-                        <textarea id="textarea1" class="white-text materialize-textarea"></textarea>
-                        <label for="textarea1">Message</label>
-                    </div>
-
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                        <i class="material-icons right">send</i>
+            <div class="row">
+                <form class="center-align col s12" action="mailto:c.etges86@gmail.com">
+                    <button class="btn waves-effect waves-light z-depth-4" type="submit" name="action">Email Me
+                        <i class="material-icons left">email</i>
                     </button>
-
+                    
+                    <button class="btn waves-effect waves-light z-depth-4">Call Me - (303) 518 - 2933
+                        <i class="material-icons left">local_phone</i>
+                    </button>
                 </form>
+
+                
+
             </div>
 
 
             <div class="row">
                 <h3 class="center-align">Visit Me</h3>
-                <div class="col s12 m6 l6">
-                    <div class="card-panel grey lighten-5 z-depth-1">
+                <div class="col s12 m6 l4">
+                    <div class="card-panel z-depth-1">
                         <div class="row valign-wrapper">
                             <div class="col s2 m5 l5">
                                 <img src="assets/images/githublogo.png" alt="github logo" class="responsive-img circle">
                             </div>
                             <div class="col s10 m7 l7">
                                 <span class="black-text">
-                                        <a href="https://github.com/cetges86">Visit my Github Profile</a>
-                                    </span>
+                                    <a href="https://github.com/cetges86">Visit my Github Profile</a>
+                                </span>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m6 l6">
-                    <div class="card-panel grey lighten-5 z-depth-1">
+                <div class="col s12 m6 l4">
+                    <div class="card-panel z-depth-1">
                         <div class="row valign-wrapper">
                             <div class="col s2 m5 l5">
                                 <img src="assets/images/linkedinlogo.png" alt="linkedin logo" class="responsive-img circle">
@@ -107,6 +99,20 @@
                         </div>
                     </div>
                 </div>
+                <div class="col s12 m6 l4">
+                        <div class="card-panel z-depth-1">
+                            <div class="row valign-wrapper">
+                                <div class="col s2 m5 l5">
+                                    <img src="assets/images/facebook.png" alt="facebook logo" class="responsive-img circle">
+                                </div>
+                                <div class="col s10 m7 l7">
+                                    <span class="black-text">
+                                        <a href="https://www.facebook.com/cetges">Follow Me on Facebook!</a>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
 
@@ -114,28 +120,28 @@
 
     <div class="container">
         <footer class="page-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">Links</h5>
+            <!-- <div class="container">
+                    <div class="row">
+                        <div class="col l6 s12">
+                            <h5 class="white-text">Links</h5>
+                        </div>
+                        <div class="col l4 offset-l2 s12">
+                            <ul>
+                                <li>
+                                    <a class="grey-text text-lighten-3" href="https://github.com/cetges86">GitHub</a>
+                                </li>
+                                <li>
+                                    <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/chrisetges/">LinkedIn</a>
+                                </li>
+                                <li>
+                                    <a class="grey-text text-lighten-3" href="https://stackoverflow.com/users/story/8929426">Stack Overflow</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="col l4 offset-l2 s12">
-                        <ul>
-                            <li>
-                                <a class="grey-text text-lighten-3" href="https://github.com/cetges86">GitHub</a>
-                            </li>
-                            <li>
-                                <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/chrisetges/">LinkedIn</a>
-                            </li>
-                            <li>
-                                <a class="grey-text text-lighten-3" href="https://stackoverflow.com/users/story/8929426">Stack Overflow</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+                </div> -->
             <div class="footer-copyright">
-                <div class="container">
+                <div class="row">
                     © 2018 Christopher Etges
                 </div>
             </div>
