--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- Primary Nav Bar -->
             <nav>
                 <div class="nav-wrapper">
-                    <a href="index.html" class="brand-logo center">Chris Etges</a>
+                    <a href="index.html" class="brand-logo left">Chris Etges</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger">
                         <i class="material-icons">menu</i>
                     </a>
@@ -70,20 +70,39 @@
                 <div class="col s2"></div>
                 <div class="col s8">
                     <img id="headshot" class="clearfix animated z-depth-5" src="assets/images/headshot.jpg" alt="headshot of Chris Etges">
-                    <p id = "bioP" class="animated">My name is Chris Etges, and I have recently begun my journey towards becoming a full time web-developer.
-                        I am currently enrolled inx the full-stack web development course at the University of Denver. I started
+                    <p id="bioP" class="animated">Hi, I'm Chris, and I have recently begun my journey towards becoming a full time web-developer. I am
+                        currently enrolled in the full-stack web development program at the University of Denver. I started
                         learning HTML and CSS through codeacademy, and continued with courses through the University of Michigan
-                        online (via Coursera) in Javascript and Responsive Design. I continue to learn and grow and improve
-                        my skills. I hope to become a full-time web developer in front-end technologies, though once I become
-                        more familiar with backend technologies I'm hoping to be a full-stack developer. I've been interested
+                        online (via Coursera) in Javascript and Responsive Design. I have since become a full-stack developer
+                        familiar with many popular libraries and frameworks, both front and back end. I've been interested
                         in tech as a hobby for my entire life, and frequently mess around with beta programs, and custom
                         ROM installs on my Android devices. I'm an avid gamer, and love photography and travel. You'll see
                         a few of my website projects in my portfolio, and feel free to reach out to me for custom work or
                         questions. Thanks!
                     </p>
                 </div>
-                
+
             </div>
+        </section>
+        
+        <section id="tech">
+                <div class="row">
+                    <h2 id="section-header" class="animated center-align">Tech I Love</h2>
+                    <div class="carousel animated">
+                        <a class="carousel-item">
+                            <img src="assets/images/jslogo.png">HTML5, CSS3, JS (ES6)</a>
+                        <a class="carousel-item">
+                            <img src="assets/images/jquery.png">jQuery</a>
+                        <a class="carousel-item">
+                            <img src="assets/images/materialize.png">Materialize CSS</a>
+                        <a class="carousel-item">
+                            <img src="assets/images/bootstrap.png">Bootstrap</a>
+                        <a class="carousel-item">
+                            <img src="assets/images/node_logo.png">node.js</a>
+                        <a class="carousel-item">
+                            <img src="assets/images/mysql.png">mySQL/Sequelize</a>
+                    </div>
+                </div>
         </section>
 
 
@@ -91,7 +110,7 @@
 
     <div class="container">
         <footer class="page-footer">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
                         <h5 class="white-text">Links</h5>
@@ -110,9 +129,9 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="footer-copyright">
-                <div class="container">
+                <div class="row">
                     © 2018 Christopher Etges
                 </div>
             </div>
