--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <!-- Primary Nav Bar -->
             <nav>
                 <div class="nav-wrapper">
-                    <a href="index.html" class="brand-logo center">Chris Etges</a>
+                    <a href="index.html" class="brand-logo left">Chris Etges</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger">
                         <i class="material-icons">menu</i>
                     </a>
@@ -292,13 +292,76 @@
                     </div>
                 </div>
             </div>
+            <div class="row valign-wrapper">
+                    <div id="proj9" class="card animated col s10 m5 l5">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/friend-finder.png">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Friend Finder Application (Full Stack)</span>
+                            <i class="material-icons right">more_vert</i>
+                            </span>
+                            <p>
+                                <a target="_blank" href="https://secure-chamber-17235.herokuapp.com/">Link (Heroku)</a>
+                            </p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Friend Finder Full Stack App
+                                <i class="material-icons right">close</i>
+                            </span>
+                            <p> 
+                                <br>
+                            </p>
+                            <ul>
+                                <span id="heading">Technologies Used:</span>
+                                <li>Materialize</li>
+                                <li>Express.js Server</li>
+                                <li>Javascript</li>
+                                <li>node.js</li>
+                                <li>npm packages: express, body-parser, path</li>
+                            </ul>
+                            <a href="https://github.com/cetges86/friend-finder-app">Github Repo</a>
+                        </div>
+                    </div>
+                    <div id="proj10" class="card animated col s10 m5 l5 offset-l2">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/burger.png">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Burger MySQL Application</span>
+                            <i class="material-icons right">more_vert</i>
+                            </span>
+                            <p>
+                                <a target="_blank" href="https://radiant-sea-18751.herokuapp.com/">Link (Heroku)</a>
+                            </p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Burger SQL App
+                                <i class="material-icons right">close</i>
+                            </span>
+                            <p>Express Server with JawsDB mySQL database
+                                <br>
+                            </p>
+                            <ul>
+                                <span id="heading">Technologies Used:</span>
+                                <li>Javascript</li>
+                                <li>Express.js</li>
+                                <li>Handlebars</li>
+                                <li>mySQL</li>
+                                <li>Bootstrap</li>
+                                <li>HTML/CSS</li>
+                            </ul>
+                            <a href="https://github.com/cetges86/burger">Github Repo</a>
+                        </div>
+                    </div>
+                </div>
         </div>
 
     </main>
 
     <div class="container">
         <footer class="page-footer">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
                         <h5 class="white-text">Links</h5>
@@ -317,9 +380,9 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="footer-copyright">
-                <div class="container">
+                <div class="row">
                     © 2018 Christopher Etges
                 </div>
             </div>
